Default Calendar: make sure list is aligned to left

--- a/assets/css/default-calendar-list.css
+++ b/assets/css/default-calendar-list.css
@@ -222,7 +222,8 @@
 
 .simcal-default-calendar-list {
   min-height: 100px;
-  padding: 10px 0; }
+  padding: 10px 0;
+  text-align: left; }
   .simcal-default-calendar-list .simcal-calendar-head {
     display: table;
     padding-bottom: 10px;
