--- a/assets/css/sass/calendars/_default-calendar-list.scss
+++ b/assets/css/sass/calendars/_default-calendar-list.scss
@@ -2,6 +2,7 @@
 
   min-height: 100px;
   padding: 10px 0;
+  text-align: left;
 
   .simcal-calendar-head {
 
